--- a/rover/partials/errorPopup/rvTimeoutError.html
+++ b/rover/partials/errorPopup/rvTimeoutError.html
@@ -1,6 +1,8 @@
 <div role="dialog" id="modal" class="modal-show" ng-class="{'modal-show': !modalClosing}">
 	<div class="modal-content new-content form warning warning-modal">
-	  <div class="ows_error" translate >OWS_ERROR_MSG</div>
+	  <div class="ows_error" >
+	  	Rover is having trouble to respond. Please re-try. If the issue persists please visit the <a href="#" ng-click="onClickSupportLink()">Support Portal</a> to submit a ticket.
+	  </div>
 	  <div class="actions float">
 	    <button class="button modal-close white red-text" ng-click="closeThisDialog()" translate>CLOSE</button>
 	  </div>
