CICO-37141 Fixed popup close on admin

--- a/admin/partials/popups/freshdesk.html
+++ b/admin/partials/popups/freshdesk.html
@@ -1,6 +1,6 @@
 <div id="modal" class="modal-show" ng-class="{'modal-show': !modalClosing}" role="dialog" ng-cloak>
 	<div class="modal-content release-notes-popup">
-		<button id="modal-close" type="button" class="modal-close" click-touch="closeDialog()">
+		<button id="modal-close" type="button" class="modal-close" ng-click="closeThisDialog()">
 			<span class="icons icon-close invert"></span>
 		</button>
 		<div class="iframe-scroll">
