--- a/guestweb/common_css/public_ny/theme.less
+++ b/guestweb/common_css/public_ny/theme.less
@@ -10,6 +10,7 @@ body {
 body {
     background-color: #FFF;
     font-family: "Gotham Book";
+    
 }
 
 .back-text {
@@ -17,14 +18,16 @@ body {
 }
 
 .main-text,
-.btn{
-    font-family: "Gotham Ultra" ;
+.btn {
+    font-family: "Gotham Ultra";
     text-transform: uppercase;
     font-weight: bolder;
 }
-.strong-font{
-  font-family: "Gotham Ultra" ;
+
+.strong-font {
+    font-family: "Gotham Ultra";
 }
+
 a,
 a:hover,
 .main-text,
@@ -61,9 +64,11 @@ a:hover,
 .view-bill {
     color: #363d40;
 }
-.sub-text{
-  font-family: "Gotham Light"
+
+.sub-text {
+    font-family: "Gotham Light"
 }
+
 .sub-text,
 .sub-text:hover,
 .query-text,
@@ -79,7 +84,7 @@ a:hover,
 }
 
 .dual-button {
-    font-size: 26px;
+    font-size: 22px;
     font-weight: 900;
 }
 
@@ -124,12 +129,11 @@ a:hover,
     font-weight: 500;
 }
 
-.amount,
-.time {
-    font-size: 30px;
-    line-height: 1.2;
-}
-
+// .amount,
+// .time {
+//     font-size: 30px;
+//     line-height: 1.2;
+// }
 .down-arrow-button {
     background-image: url('/assets/guestweb/common_images/black/down_arrow.png');
 }
@@ -150,8 +154,16 @@ a:hover,
     color: #BA7A55;
 }
 
-
+.circle-bg{
+  line-height: 1;
+}
 /*----------------- date picker -------------------------*/
+
+.pickadate-cell,
+.for,
+.amount {
+    font-family: "Gotham Book"
+}
 
 .pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {
     color: #000;
@@ -268,7 +280,7 @@ a:hover,
 }
 
 .time {
-    font-size: 100px;
+    font-size: 85px;
     display: block;
 }
 
@@ -277,16 +289,26 @@ a:hover,
 }
 
 .for {
-    // line-height: 0 !important;
-    font-size: 10px;
+    font-size: 16px;
     margin-right: 7px;
 }
 
-// .amount {
-//     margin-top: -27px;
-// }
-.triple-button{
-  border-right: 1px inset #6A6A6A;
+.ap {
+    font-size: 30px;
+}
+
+.amount {
+    font-size: 28px;
+}
+
+.triple-button,
+.dual-button {
+    border-right: 1px inset #6A6A6A;
+}
+
+.circle-bg {
+    height: 124px;
+    padding-top: 0px;
 }
 
 @media (max-width: 990px) {
@@ -299,27 +321,48 @@ a:hover,
     }
     .btn-template,
     .dual-button {
-        font-size: 40px;
+        font-size: 20px;
     }
     .main-text {
-        font-size: 50px;
+        font-size: 41px;
     }
     .checkout-alone-button {
         float: left;
-        margin-left: 129px;
+        margin-left: 19px;
     }
     .sub-main-text {
-        font-size: 27px;
+        font-size: 19px;
+    }
+    .checkout-btn {
+        padding: 10% 8%;
     }
 }
 
 @media (min-width: 990px) {
     .main-text {
-        font-size: 50px;
+        font-size: 44px;
     }
     .sub-main-text {
-    font-size: 24px;
+        font-size: 21px;
+    }
+    .sub-text{
+      font-size: 15px !important;
+    }
+    .query-text{
+      font-size: 11px;
+    }
+    .checkout-alone-button {
+               margin-left: 126px;
+    }
 }
+
+@media (max-width: 890px) {
+    .btn-template {
+        padding: 4%;
+    }
+    .checkout-alone-button {
+        margin-left: 24px;
+    }
 }
 
 @media (max-width: 480px) {
