--- a/admin/partials/zestStation/adZestStationCfg.html
+++ b/admin/partials/zestStation/adZestStationCfg.html
@@ -81,7 +81,7 @@
                             <button type="button" class="button brand-colors">Attach file</button>
                             <button type="button" class="button download-arrow icons " ng-click="downloadLang('es')" ng-show="hasFileUpdatedOrUploading('spanish')"></button>
 
-                            <button type="button" ng-show="hasFileUpdatedOrUploading('spanish')" class="button download-arrow icons right " ng-click="editLang('es')">
+                            <button type="button" ng-show="hasFileUpdatedOrUploading('french')" class="button download-arrow icons right " ng-click="editLang('es')">
                                 <text ng-include="'/assets/cssimg/admin/adEditorIconSvg.svg'"></text>
                             </button>
                         </div>
@@ -99,7 +99,7 @@
                             <button type="button" class="button brand-colors">Attach file</button>
                             <button type="button" class="button download-arrow icons " ng-click="downloadLang('de')" ng-show="hasFileUpdatedOrUploading('german')"></button>
 
-                            <button type="button" ng-show="hasFileUpdatedOrUploading('german')" class="button download-arrow icons right " ng-click="editLang('de')">
+                            <button type="button" ng-show="hasFileUpdatedOrUploading('french')" class="button download-arrow icons right " ng-click="editLang('de')">
                                 <text ng-include="'/assets/cssimg/admin/adEditorIconSvg.svg'"></text>
                             </button>
                         </div>
@@ -117,7 +117,7 @@
                             <button type="button" class="button brand-colors">Attach file</button>
                             <button  type="button" class="button download-arrow icons " ng-click="downloadLang('it')" ng-show="hasFileUpdatedOrUploading('italian')"></button>
 
-                            <button type="button" ng-show="hasFileUpdatedOrUploading('italian')" class="button download-arrow icons right " ng-click="editLang('it')">
+                            <button type="button" ng-show="hasFileUpdatedOrUploading('french')" class="button download-arrow icons right " ng-click="editLang('it')">
                                 <text ng-include="'/assets/cssimg/admin/adEditorIconSvg.svg'"></text>
                             </button>
                         </div>
@@ -135,7 +135,7 @@
                             <button type="button" class="button brand-colors">Attach file</button>
                             <button type="button" class="button download-arrow icons " ng-click="downloadLang('cl')" ng-show="hasFileUpdatedOrUploading('castellano')"></button>
 
-                            <button type="button" ng-show="hasFileUpdatedOrUploading('castellano')" class="button download-arrow icons right " ng-click="editLang('cs')">
+                            <button type="button" ng-show="hasFileUpdatedOrUploading('french')" class="button download-arrow icons right " ng-click="editLang('cs')">
                                 <text ng-include="'/assets/cssimg/admin/adEditorIconSvg.svg'"></text>
                             </button>
                         </div>
