--- a/zest_station/css/themes/public/theme.less
+++ b/zest_station/css/themes/public/theme.less
@@ -54,6 +54,17 @@
 		}
 	}
 
+
+    .logo-svg{
+        background-image: url("../css/themes/public/logo.svg");
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 100%;
+	    height: 100%;
+	    background-position: center;
+	    margin-top: 5%;
+    }
+
 /* 4. LAYOUT
 ==========================================================*/
 	
