--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1928,11 +1928,11 @@
     position: absolute;
     top: 0;
     >div{
-        overflow:scroll;
+        overflow:auto;
         height:100%;   
     }
 
-    background-color: @brandColor;
+    background-color: grey;
 
     width: 35%;
     z-index:999;
@@ -1940,7 +1940,7 @@
     overflow:hidden;
     padding-right: 5px;
     padding-left: 5px;
-    border-color: @textColor;
+    border-color: @white;
     border-style: solid;
     border-width: 2px;
     border-top-right-radius: 2em;
@@ -1964,7 +1964,7 @@
 }
 
 .jumper-no-wrap {
-    overflow:scroll;
+    overflow:auto;
     height:100%;
 }
 
