--- a/stylesheets/less/app/screens/12.reports.less
+++ b/stylesheets/less/app/screens/12.reports.less
@@ -2024,6 +2024,14 @@
                             &.rooms {
                                 width: 60px;
                             }
+
+                            &.picked-up {
+                                min-width: 80px;
+                            }
+
+                            &.not-picked-up {
+                                min-width: 100px;
+                            }
                         }
                     }
                 }
@@ -2924,7 +2932,7 @@
                     left: 125px;
 
                     .wrapper {
-                        width: 2200px;
+                        width: 1500px;
                     }
                 }
             }
