--- a/guestweb/common_css/public_ny/theme.less
+++ b/guestweb/common_css/public_ny/theme.less
@@ -89,8 +89,8 @@ a:hover,
 }
 
 .btn-template {
-    font-size: 26px;
-    padding: 4%;
+    font-size: 22px;
+    padding: 5%;
 }
 
 .dark-button,
@@ -310,6 +310,61 @@ a:hover,
     height: 124px;
     padding-top: 0px;
 }
+@media (max-width: 480px) {
+    .main-text {
+        font-size: 10vw;
+    }
+    .container {
+        width: 100%;
+    }
+    .sub-main-text {
+        font-size: 17px;
+    }
+    .footer-text {
+        font-size: 5.3vw;
+    }
+    .logo-image {
+        max-width: 200px;
+        margin: 3% auto;
+    }
+    .dual-button {
+        font-size: 23px;
+    }
+    .section-container {
+        padding-bottom: 0px;
+    }
+    .checkout-alone-button {
+        margin-left: 95px !important;
+    }
+}
+
+@media (max-width: 890px) {
+    .btn-template {
+        padding: 4%;
+    }
+    .checkout-alone-button {
+        margin-left: 95px !important;
+    }
+}
+
+@media (min-width: 990px) {
+    .main-text {
+        font-size: 44px;
+    }
+    .sub-main-text {
+        font-size: 21px;
+    }
+    .sub-text{
+      font-size: 15px !important;
+    }
+    .query-text{
+      font-size: 11px;
+    }
+    .checkout-alone-button {
+               margin-left: 126px;
+    }
+}
+
 
 @media (max-width: 990px) {
     .logo-image {
@@ -337,55 +392,9 @@ a:hover,
         padding: 10% 8%;
     }
 }
-
-@media (min-width: 990px) {
-    .main-text {
-        font-size: 44px;
-    }
-    .sub-main-text {
-        font-size: 21px;
-    }
-    .sub-text{
-      font-size: 15px !important;
-    }
-    .query-text{
-      font-size: 11px;
-    }
-    .checkout-alone-button {
-               margin-left: 126px;
-    }
-}
-
-@media (max-width: 890px) {
+@media (max-width :1085px) {
     .btn-template {
-        padding: 4%;
+           width: 136% !important;
     }
-    .checkout-alone-button {
-        margin-left: 24px;
-    }
-}
-
-@media (max-width: 480px) {
-    .main-text {
-        font-size: 10vw;
-    }
-    .container {
-        width: 100%;
-    }
-    .sub-main-text {
-        font-size: 17px;
-    }
-    .footer-text {
-        font-size: 5.3vw;
-    }
-    .logo-image {
-        max-width: 200px;
-        margin: 3% auto;
-    }
-    .dual-button {
-        font-size: 23px;
-    }
-    .section-container {
-        padding-bottom: 0px;
-    }
+    
 }
