CICO-36470 CICO-36471 updated router

--- a/guestweb/common_css/public_ny/theme.less
+++ b/guestweb/common_css/public_ny/theme.less
@@ -347,6 +347,7 @@ a:hover,
     }
 }
 
+
 @media (min-width: 990px) {
     .main-text {
         font-size: 44px;
@@ -391,10 +392,7 @@ a:hover,
     .checkout-btn {
         padding: 10% 8%;
     }
-}
-@media (max-width :1085px) {
-    .btn-template {
-           width: 136% !important;
+     .back_check{
+     width: 136% !important;
     }
-    
 }
