CICO-31802 - Style Update

--- a/stylesheets/less/admin/03_graphics.less
+++ b/stylesheets/less/admin/03_graphics.less
@@ -564,6 +564,13 @@
             &.in-quick-menu { background-position: 0 -5450px; }
             &.moved { background-position: 0 -5450px, 0 0; }
         }
+
+        &.icon-servers {
+            background-position: 0px -5500px;
+
+            &.in-quick-menu { background-position: 0px -5550px; }
+            &.moved { background-position: 0px -5550px, 0 0; }
+        }
     }
 
 /* Rover icons          ==================================*/
