--- a/stylesheets/less/app/screens/12.reports.less
+++ b/stylesheets/less/app/screens/12.reports.less
@@ -69,7 +69,7 @@
 
     #report-main-menu {
         position: relative;
-        height: 250px;
+        height: 300px;
         background: @rcardTexture1;
         z-index: 30;
     }
@@ -607,6 +607,10 @@
         &.buttons-3 {
             .calc-height(100, 160);
         }
+
+        &.buttons-4 {
+            .calc-height(100, 210);
+        }
     }
 
     /* Bottom Actions ***/
@@ -618,7 +622,7 @@
         padding: 10px;
         background: rgba(0,0,0,.1);
         min-height: 60px;
-        max-height: 160px;
+        max-height: 210px;
         width: 100%;
         .show();
 
