--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1931,8 +1931,9 @@
         overflow:auto;
         height:100%;   
     }
-
-    background-color: grey;
+    opacity: .9; 
+    background-color: @inputBackground;
+    border-color: @textColor;
 
     width: 35%;
     z-index:999;
@@ -1940,7 +1941,6 @@
     overflow:hidden;
     padding-right: 5px;
     padding-left: 5px;
-    border-color: @white;
     border-style: solid;
     border-width: 2px;
     border-top-right-radius: 2em;
@@ -1948,25 +1948,51 @@
     border-left-width: 0px;
 }
 
-.jumper-box{
-    min-width:150px;
-    float: left;
-    margin-left: 20px;
-    opacity: .5;
-}
-.jumper-box:hover{
-    opacity: 1;
-    /*background-color: @headerIconsColor;*/
-    cursor: pointer;
 
-    background:
-    opacity: .7;
+.jumper-box-li {
+    * {margin: 0; padding: 0; text-align:left;}
+
+    div {
+      margin: 20px;
+    }
+
+    ul {
+      list-style-type: none;
+      width: 500px;
+    }
+
+    h3 {
+      font: bold 20px/1.5 Helvetica, Verdana, sans-serif;
+    }
+
+    li img {
+      float: left;
+      margin: 0 15px 0 0;
+    }
+
+    li p {
+      font: 200 12px/1.5 Georgia, Times New Roman, serif;
+    }
+
+    li {
+        padding: 10px;
+        overflow: auto;
+    }
+
+    li:hover {
+        background-color: @textColor;
+        color: @inputBackground;
+               
+        cursor: pointer;
+    }
+}
+.view-mode{
+    padding-left: 25px !important;
 }
 
-.jumper-no-wrap {
-    overflow:auto;
-    height:100%;
-}
+
+
+
 
 
 
