CICO-37654 restricting time in one single drop down

--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -286,6 +286,9 @@
   transform: scale(1.5);
   cursor:pointer;
 }
+.eta-single select{
+    width:100%;
+}
 /*---------------- carousal ---------------------------*/
 .carousal,.carousal-container{
   padding-left: 0px !important;
