--- a/rover/partials/reports/businessOnBooks/rvBusinessOnBooksReport.html
+++ b/rover/partials/reports/businessOnBooks/rvBusinessOnBooksReport.html
@@ -57,10 +57,10 @@
                 <tbody>
                     <tr ng-repeat="roomDet in roomDetails track by $index">
                         <td class="rooms">{{roomDet.rooms_data.rooms_count}}</td>
-                        <td class="rooms">{{roomDet.rooms_data.rooms_occ_percentage}}</td>
-                        <td class="rooms">{{roomDet.rooms_data.rooms_available_rooms}}</td>
-                        <td class="rooms">{{roomDet.rooms_data.rooms_ooo_rooms_count}}</td>
-                        <td>${{roomDet.rooms_data.rooms_revenue}}</td>
+                        <td class="rooms">{{roomDet.rooms_data.occ_percentage}}</td>
+                        <td class="rooms">{{roomDet.rooms_data.available_rooms}}</td>
+                        <td class="rooms">{{roomDet.rooms_data.ooo_rooms_count}}</td>
+                        <td>${{roomDet.rooms_data.revenue}}</td>
                         <td>${{roomDet.rooms_data.adr}}</td>
                         <td class="rooms">{{roomDet.groups_data.picked_up_count}}</td>
                         <td class="rooms">{{roomDet.groups_data.non_picked_up_count}}</td>
