CICO-36470 checkout styles

--- a/guestweb/common_css/public_ny/theme.less
+++ b/guestweb/common_css/public_ny/theme.less
@@ -346,6 +346,13 @@ a:hover,
         margin-left: 95px !important;
     }
 }
+@media (min-width: 890px) {
+   .back_check{
+     font-size: 17px;
+    
+    padding-top: 17px;
+    }
+}
 
 
 @media (min-width: 990px) {
@@ -392,7 +399,5 @@ a:hover,
     .checkout-btn {
         padding: 10% 8%;
     }
-     .back_check{
-     width: 136% !important;
-    }
+    
 }
